--- a/settings.json
+++ b/settings.json
@@ -25,11 +25,14 @@
     "editor.tabSize": 2
   },
   "[markdown]": {
-    "editor.defaultFormatter": "vscode.markdown-language-features",
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
     "editor.tabSize": 2
   },
   "[prisma]": {
     "editor.defaultFormatter": "Prisma.prisma"
+  },
+  "[proto]": {
+    "editor.defaultFormatter": "bufbuild.vscode-buf"
   },
   "[python]": {
     "editor.codeActionsOnSave": {
@@ -38,6 +41,10 @@
     "editor.defaultFormatter": "ms-python.black-formatter",
     "editor.formatOnSave": true,
     "editor.tabSize": 4
+  },
+  "[sql]": {
+    "editor.defaultFormatter": "dorzey.vscode-sqlfluff",
+    "editor.tabSize": 2
   },
   "[terraform-vars]": {
     "editor.tabSize": 2
@@ -64,7 +71,7 @@
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.detectIndentation": false,
   "editor.fontFamily": "'Monaspace Neon', 'JetBrains Mono', monospace",
-  "editor.fontLigatures": "'ss01', 'ss02', 'ss03', 'ss04', 'ss05', 'ss06', 'ss07', 'ss08', 'calt', 'dlig'",
+  "editor.fontLigatures": "'calt', 'ss01', 'ss02', 'ss03', 'ss04', 'ss05', 'ss06', 'ss07', 'ss08', 'liga'",
   "editor.formatOnSave": true,
   "editor.guides.bracketPairs": "active",
   "editor.inlineSuggest.enabled": true,
@@ -102,6 +109,7 @@
   "files.insertFinalNewline": true,
   "files.trimTrailingWhitespace": true,
   "git.autofetch": true,
+  "github.copilot.editor.enableAutoCompletions": false,
   "github.copilot.enable": {
     "*": true,
     "go": true,
@@ -112,6 +120,11 @@
   },
   "go.alternateTools": {
     "go": "/home/vinh/.asdf/shims/go"
+  },
+  "go.lintTool": "golangci-lint",
+  "go.toolsManagement.autoUpdate": true,
+  "gopls": {
+    "formatting.gofumpt": true
   },
   // Highlight Matching Tag
   "highlight-matching-tag.highlightSelfClosing": true,
@@ -137,6 +150,7 @@
   },
   "notebook.lineNumbers": "on",
   "prettier.proseWrap": "always",
+  "prisma.showPrismaDataPlatformNotification": false,
   "redhat.telemetry.enabled": false,
   // Rewrap Extension
   "rewrap.autoWrap.enabled": true,
@@ -272,6 +286,11 @@
   "window.menuBarVisibility": "compact",
   "window.titleBarStyle": "custom",
   "workbench.activityBar.location": "top",
+  "workbench.colorCustomizations": {
+    "[Catppuccin Frappé]": {
+      "sideBar.border": "#e78284"
+    }
+  },
   "workbench.colorTheme": "Catppuccin Frappé",
   "workbench.editor.historyBasedLanguageDetection": true,
   "workbench.editor.scrollToSwitchTabs": true,
